Fix off by one pixel gap

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h1 {
 }
 
 .buttons button[value="0"] {
-  width: 49.2%;
+  width: 49.3%;
 }
 
 .operand {
